--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "strictPropertyInitialization": false /* Enable strict checking of property initialization in classes. */,
     "noUnusedLocals": true /* Report errors on unused locals. */,
     "noUnusedParameters": false /* Report errors on unused parameters. */,
+    "baseUrl": "./src",
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "noImplicitReturns": true
