--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@think-it-labs/edc-connector-client": "file:vendors/think-it-labs/edc-connector-client",
+    "@think-it-labs/typed-error": "^0.2.0",
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
     "koa": "^2.14.1",
