--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
+    "@think-it-labs/edc-connector-client": "^0.0.1-milestone-8.beta-4",
+    "@think-it-labs/typed-error": "^0.2.0",
     "koa": "^2.14.1",
+    "koa-bodyparser": "^4.3.0",
     "tsc": "^2.0.4"
   },
   "devDependencies": {
