--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "@koa/router": "^12.0.0",
     "@types/chai": "^4.3.4",
     "@types/koa": "^2.13.5",
+    "@types/koa-bodyparser": "^4.3.10",
     "@types/koa__cors": "^3.3.0",
     "@types/koa__router": "^12.0.0",
-    "@types/koa-bodyparser": "^4.3.10",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.13",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "commitlint-plugin-function-rules": "^1.7.1",
