chore(db): adds postgresql database to the project
- creates code structure of how the gateways would be used

closes #17

--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,5 @@
 API_PORT = 3000
+POSTGRES_URL=""
 # For testing purpose, we are using the internal-edc-ui's connector configuration
 # This is the connetor docker image for this connector https://github.com/Think-iT-Labs/internal-edc-ui/pkgs/container/internal-edc-ui%2Fconnector
 CONNECTOR_CONFIG = {"id":"urn:connector:consumer", "title":"consumer.edc.think-it.io", "catalogId":"default", "description":"The consumer connector for the EDC manager demo", "region":"eu-west-1", "addresses": { "default":"http://localhost:19191/api", "validation":"http://localhost:19292", "management":"http://localhost:19193/api/v1/data", "protocol":"http://consumer-connector:9194/api/v1/ids", "dataplane":"http://localhost:19195", "public":"http://localhost:19291/public", "control":"http://localhost:19292/control"}}
