--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "sequelize": "^6.29.3",
     "sequelize-cli": "^6.6.0",
     "sequelize-typescript": "^2.1.5",
-    "tsc": "^2.0.4"
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
