feat: adds the /companies endpoint
- adds the /componies endpoint that returns the users in the same group
- adds public key based authentication that validates the users on the sfc unit
based on their public key

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "scripts": {
     "dev": "NODE_PATH=src nodemon --exec ts-node src/server.ts",
+    "dev:provider": "cross-env KEYCLOAK_REALM=provider API_PORT=3001  NODE_PATH=src nodemon --exec ts-node src/server.ts",
+    "dev:consumer": "cross-env KEYCLOAK_REALM=consumer API_PORT=3002 NODE_PATH=src nodemon --exec ts-node src/server.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "start": "NODE_PATH=dist node dist/server.js",
