refactor: added a new sfc-unit and participants module
- moved all the code related to sfc-unit to new sfc-unit folder
- updates scripts and env variables to seperate users
- moves the dataGateways to the sfc-unit
- corrects build script

relates to #43

--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,13 @@
-require("dotenv/config");
-const path = require("path");
+require('dotenv/config');
+const path = require('path');
 
 module.exports = {
-  config: path.resolve("src", "infrastructure", "db", "config.js"),
-  "migrations-path": path.resolve("src", "infrastructure", "db", "migrations"),
+  config: path.resolve('src', 'sfc-unit', 'infrastructure', 'db', 'config.js'),
+  'migrations-path': path.resolve(
+    'src',
+    'sfc-unit',
+    'infrastructure',
+    'db',
+    'migrations'
+  ),
 };
