--- a/.env-sample
+++ b/.env-sample
@@ -16,7 +16,15 @@ KEYCLOAK_HOST=
 KEYCLOAK_PUBLIC_KEY=
 
 # For testing purpose, we are using the internal-edc-ui's connector configuration
+
 # This is the connetor docker image for this connector https://github.com/Think-iT-Labs/internal-edc-ui/pkgs/container/internal-edc-ui%2Fconnector
+
 CONNECTOR_CONFIG = {"id":"urn:connector:consumer", "title":"consumer.edc.think-it.io", "catalogId":"default", "description":"The consumer connector for the EDC manager demo", "region":"eu-west-1", "addresses": { "default":"http://localhost:19191/api", "validation":"http://localhost:19292", "management":"http://localhost:19193/api/v1/data", "protocol":"http://consumer-connector:9194/api/v1/ids", "dataplane":"http://localhost:19195", "public":"http://localhost:19291/public", "control":"http://localhost:19292/control"}}
 CONNECTOR_REGISTRY_CONFIG = {"id":"urn:connector:provider", "title":"provider.edc.think-it.io", "catalogId":"default", "description":"The provider connector for the EDC manager demo", "region":"eu-west-1", "addresses": { "default":"http://localhost:29191/api", "validation":"http://localhost:29292", "management":"http://localhost:29193/api/v1/data", "protocol":"http://provider-connector:9194/api/v1/ids", "dataplane":"http://localhost:29195", "public":"http://localhost:29291/public", "control":"http://localhost:29292/control"}}
+
+PROVIDER_KEYCLOAK_PUBLIC_KEY=
+CONSUMER_KEYCLOAK_PUBLIC_KEY=
+
+CONSUMER_CONNECTOR_CONFIG=
+PROVIDER_CONNECTOR_CONFIG=
 
