chore: Replace global context with redis
- adds redis client to the site

--- a/.env-sample
+++ b/.env-sample
@@ -14,6 +14,7 @@ TEST_PG_PORT=
 KEYCLOAK_REALM=
 KEYCLOAK_HOST=
 KEYCLOAK_PUBLIC_KEY=
+REDIS_URL=
 
 # For testing purpose, we are using the internal-edc-ui's connector configuration
 
@@ -27,4 +28,3 @@ CONSUMER_KEYCLOAK_PUBLIC_KEY=
 
 CONSUMER_CONNECTOR_CONFIG=
 PROVIDER_CONNECTOR_CONFIG=
-
