--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "koa-bodyparser": "^4.3.0",
     "lodash": "^4.17.21",
     "pg": "^8.10.0",
+    "redis": "^4.6.5",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.29.3",
     "sequelize-cli": "^6.6.0",
@@ -57,6 +58,7 @@
     "@types/koa__router": "^12.0.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.13",
+    "@types/redis": "^4.0.11",
     "@types/validator": "^13.7.14",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "chai": "^4.3.7",
