feat: adds validation to shared data

--- a/.env-sample
+++ b/.env-sample
@@ -16,6 +16,11 @@ KEYCLOAK_HOST=
 KEYCLOAK_PUBLIC_KEY=
 REDIS_URL=
 
+
+AWS_REGION=
+AWS_ACCESS_ID=
+AWS_SECRET=
+
 # For testing purpose, we are using the internal-edc-ui's connector configuration
 
 # This is the connetor docker image for this connector https://github.com/Think-iT-Labs/internal-edc-ui/pkgs/container/internal-edc-ui%2Fconnector
