--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "migrate": "sequelize db:migrate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.321.1",
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
     "@think-it-labs/edc-connector-client": "^0.0.1-milestone-8.beta-4",
     "@think-it-labs/typed-error": "^0.2.0",
     "axios": "^1.3.4",
+    "csv-to-js-parser": "^2.3.5",
     "dotenv": "^16.0.3",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
