--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
     "build": "cross-env NODE_PATH=src tsc && rm -rf dist/__tests__ **/*.test.ts",
     "test:one-unit": "cross-env NODE_ENV=test NODE_PATH=src mocha --exit",
     "test:unit": "yarn  test:one-unit --  'src/**/*.unit.test.ts'",
-    "test:one-integration": "cross-env NODE_ENV=test NODE_PATH=src mocha  -r ts-node/register -r src/__tests__/hooks.ts --timeout 20000 --exit",
-    "test:integration": "yarn test:one-integration -- 'src/**/*.integration.test.ts' ",
-    "undo-migration": "sequelize db:migrate:undo:all",
-    "migrate": "sequelize db:migrate"
+    "test:one-integration": "cross-env NODE_ENV=test NODE_PATH=src mocha  -r ts-node/register --timeout 20000 --exit",
+    "test:integration": "yarn test:one-integration -- 'src/**/*.integration.test.ts' "
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.321.1",
@@ -43,9 +41,6 @@
     "pg": "^8.10.0",
     "redis": "^4.6.5",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.29.3",
-    "sequelize-cli": "^6.6.0",
-    "sequelize-typescript": "^2.1.5",
     "socket.io": "^4.6.1",
     "validatorjs": "^3.22.1"
   },
