--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@think-it-labs/typed-error": "^0.2.0",
     "axios": "^1.3.4",
     "csv-to-js-parser": "^2.3.5",
+    "date-and-time": "^3.0.0",
     "dotenv": "^16.0.3",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
