feat: pull participants configuration from s3 using aws sdk

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.321.1",
+    "@aws-sdk/util-stream-node": "^3.331.0",
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
     "@think-it-labs/edc-connector-client": "^0.0.1-milestone-8.beta-4",
