--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "cross-env NODE_PATH=src tsc && rm -rf dist/__tests__ **/*.test.ts",
     "test:one-unit": "cross-env NODE_ENV=test NODE_PATH=src mocha --exit",
     "test:unit": "yarn  test:one-unit --  'src/**/*.unit.test.ts'",
+    "tdd:unit": "npm run test:unit -- -w 'src/**/*.unit.test.ts'",
     "test:one-integration": "cross-env NODE_ENV=test NODE_PATH=src mocha  -r ts-node/register --timeout 20000 --exit",
     "test:integration": "yarn test:one-integration -- 'src/**/*.integration.test.ts' "
   },
@@ -53,17 +54,22 @@
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
     "@types/chai": "^4.3.4",
+    "@types/chai-as-promised": "^7.1.6",
     "@types/koa": "^2.13.5",
-    "@types/koa-bodyparser": "^4.3.10",
     "@types/koa__cors": "^3.3.0",
     "@types/koa__router": "^12.0.0",
+    "@types/koa-bodyparser": "^4.3.10",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.13",
     "@types/redis": "^4.0.11",
+    "@types/sinon": "^10.0.17",
+    "@types/sinon-chai": "^3.2.10",
     "@types/validator": "^13.7.14",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
+    "chai-subset": "^1.6.0",
     "commitlint-plugin-function-rules": "^1.7.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.35.0",
@@ -78,6 +84,8 @@
     "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
+    "sinon": "^16.0.0",
+    "sinon-chai": "^3.7.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
   }
