--- a/.env-sample
+++ b/.env-sample
@@ -28,8 +28,9 @@ AWS_SECRET=
 
 # This is the connetor docker image for this connector https://github.com/Think-iT-Labs/internal-edc-ui/pkgs/container/internal-edc-ui%2Fconnector
 
-CONNECTOR_CONFIG = {"id":"urn:connector:consumer", "title":"consumer.edc.think-it.io", "catalogId":"default", "description":"The consumer connector for the EDC manager demo", "region":"eu-west-1", "addresses": { "default":"http://localhost:19191/api", "validation":"http://localhost:19292", "management":"http://localhost:19193/api/v1/data", "protocol":"http://consumer-connector:9194/api/v1/ids", "dataplane":"http://localhost:19195", "public":"http://localhost:19291/public", "control":"http://localhost:19292/control"}}
-CONNECTOR_REGISTRY_CONFIG = {"id":"urn:connector:provider", "title":"provider.edc.think-it.io", "catalogId":"default", "description":"The provider connector for the EDC manager demo", "region":"eu-west-1", "addresses": { "default":"http://localhost:29191/api", "validation":"http://localhost:29292", "management":"http://localhost:29193/api/v1/data", "protocol":"http://provider-connector:9194/api/v1/ids", "dataplane":"http://localhost:29195", "public":"http://localhost:29291/public", "control":"http://localhost:29292/control"}}
+CONSUMER_CONNECTOR_CONFIG='{"id":"urn:connector:consumer","title":"consumer.edc.think-it.io","catalogId":"default","description":"The consumer connector for the EDC manager demo","region":"eu-west-1","addresses":{"default":"http://localhost:19191","control":"http://localhost:19192","data":"http://localhost:19193","ids":"http://consumer-connector:9194","public":"http://localhost:19291"}}'
+PROVIDER_CONNECTOR_CONFIG='{"id":"urn:connector:provider","title":"provider.edc.think-it.io","catalogId":"default","description":"The provider connector for the EDC manager demo","region":"eu-west-1","addresses":{"default":"http://localhost:29191","control":"http://localhost:29192","data":"http://localhost:29193","ids":"http://provider-connector:9194","public":"http://localhost:29291"}}'
+
 
 PROVIDER_KEYCLOAK_PUBLIC_KEY=
 CONSUMER_KEYCLOAK_PUBLIC_KEY=
