--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "scripts": {
     "dev:keycloak": "docker run -p 8080:8080 -e KEYCLOAK_ADMIN=admin -e KEYCLOAK_ADMIN_PASSWORD=admin quay.io/keycloak/keycloak:21.0.1 start-dev",
-    "dev": "NODE_PATH=src  API_PORT=3000 nodemon --exec ts-node src/server.ts",
     "dev:provider": "cross-env KEYCLOAK_REALM=provider API_PORT=3001  NODE_PATH=src CONNECTOR_CONFIG=\"$PROVIDER_CONNECTOR_CONFIG\"  KEYCLOAK_PUBLIC_KEY=$PROVIDER_KEYCLOAK_PUBLIC_KEY nodemon --exec ts-node src/server.ts",
     "dev:consumer": "cross-env KEYCLOAK_REALM=consumer CONNECTOR_CONFIG=\"$CONSUMER_CONNECTOR_CONFIG\" KEYCLOAK_PUBLIC_KEY=$CONSUMER_KEYCLOAK_PUBLIC_KEY API_PORT=3002 NODE_PATH=src nodemon --exec ts-node src/server.ts",
     "lint": "eslint .",
@@ -30,8 +29,8 @@
     "@aws-sdk/util-stream-node": "^3.331.0",
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
-    "@think-it-labs/edc-connector-client": "^0.0.1-milestone-8.beta-4",
-    "@think-it-labs/typed-error": "^0.2.0",
+    "@think-it-labs/edc-connector-client": "^0.2.0-beta-6",
+    "@think-it-labs/typed-error": "^0.3.0",
     "axios": "^1.3.4",
     "csv-to-js-parser": "^2.3.5",
     "date-and-time": "^3.0.0",
@@ -45,6 +44,7 @@
     "redis": "^4.6.5",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.6.1",
+    "uuid": "^9.0.1",
     "validatorjs": "^3.22.1",
     "winston": "^3.8.2"
   },
@@ -56,14 +56,15 @@
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.6",
     "@types/koa": "^2.13.5",
+    "@types/koa-bodyparser": "^4.3.10",
     "@types/koa__cors": "^3.3.0",
     "@types/koa__router": "^12.0.0",
-    "@types/koa-bodyparser": "^4.3.10",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.13",
     "@types/redis": "^4.0.11",
     "@types/sinon": "^10.0.17",
     "@types/sinon-chai": "^3.2.10",
+    "@types/uuid": "^9.0.4",
     "@types/validator": "^13.7.14",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "chai": "^4.3.7",
