--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@aws-sdk/client-s3": "^3.321.1",
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
-    "@think-it-labs/edc-connector-client": "^0.2.0-beta-6",
+    "@think-it-labs/edc-connector-client": "0.2.0-beta-6",
     "@think-it-labs/typed-error": "^0.3.0",
     "axios": "^1.3.4",
     "csv-to-js-parser": "^2.3.5",
