--- a/conf/consumer-connector.config/configuration.properties
+++ b/conf/consumer-connector.config/configuration.properties
@@ -15,7 +15,7 @@ web.http.protocol.path=/protocol
 
 edc.api.control.auth.apikey.value=123456
 
-edc.receiver.http.endpoint=http://host.docker.internal:19999
+edc.receiver.http.endpoint=http://host.docker.internal:3002/receiver/callback
 
 edc.public.key.alias=public-key
 
