--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "date-and-time": "^3.0.0",
     "dotenv": "^16.0.3",
     "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
     "lodash": "^4.17.21",
@@ -53,6 +53,7 @@
     "@koa/router": "^12.0.0",
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.6",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/koa": "^2.13.5",
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa__cors": "^3.3.0",
