chore: improve connector conenction config

--- a/.env-sample
+++ b/.env-sample
@@ -16,6 +16,20 @@ KEYCLOAK_HOST=
 KEYCLOAK_ADMIN=
 KEYCLOAK_ADMIN_PASSWORD=
 KEYCLOAK_PUBLIC_KEY=
+
+KEYCLOAK_CLIENT_ID=
+KEYCLOAK_CLIENT_SECRET=
+
+# ---------------START: dev only env variables--------------------
+PROVIDER_KEYCLOAK_CLIENT_ID=
+PROVIDER_KEYCLOAK_CLIENT_SECRET=
+CONSUMER_KEYCLOAK_CLIENT_ID=
+CONSUMER_KEYCLOAK_CLIENT_SECRET=
+
+PROVIDER_CONNECTOR_JSON=
+CONSUMER_CONNECTOR_JSON=
+# ---------------END: dev only env variables--------------------
+
 REDIS_URL=
 
 SUPPORTED_EDC_FILTER_OPERATORS=
