--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "**/*.{md,mdx}": "prettier --write"
   },
   "scripts": {
-    "dev:provider": "cross-env KEYCLOAK_CLIENT_ID=$PROVIDER_KEYCLOAK_CLIENT_ID KEYCLOAK_CLIENT_SECRET=$PROVIDER_KEYCLOAK_CLIENT_SECRET KEYCLOAK_REALM=provider API_PORT=3001  NODE_PATH=src KEYCLOAK_PUBLIC_KEY=$PROVIDER_KEYCLOAK_PUBLIC_KEY nodemon --exec ts-node src/server.ts",
-    "dev:consumer": "cross-env KEYCLOAK_CLIENT_ID=$CONSUMER_KEYCLOAK_CLIENT_ID KEYCLOAK_CLIENT_SECRET=$CONSUMER_KEYCLOAK_CLIENT_SECRET KEYCLOAK_REALM=consumer KEYCLOAK_PUBLIC_KEY=$CONSUMER_KEYCLOAK_PUBLIC_KEY API_PORT=3002 NODE_PATH=src nodemon --exec ts-node src/server.ts",
+    "dev:provider": "cross-env KEYCLOAK_CLIENT_ID=$PROVIDER_KEYCLOAK_CLIENT_ID KEYCLOAK_CLIENT_SECRET=$PROVIDER_KEYCLOAK_CLIENT_SECRET KEYCLOAK_REALM=provider API_PORT=3001  NODE_PATH=src KEYCLOAK_PUBLIC_KEY=$PROVIDER_KEYCLOAK_PUBLIC_KEY CONNECTOR_JSON_IN_DEV=$PROVIDER_CONNECTOR_JSON nodemon --exec ts-node src/server.ts",
+    "dev:consumer": "cross-env KEYCLOAK_CLIENT_ID=$CONSUMER_KEYCLOAK_CLIENT_ID KEYCLOAK_CLIENT_SECRET=$CONSUMER_KEYCLOAK_CLIENT_SECRET KEYCLOAK_REALM=consumer KEYCLOAK_PUBLIC_KEY=$CONSUMER_KEYCLOAK_PUBLIC_KEY API_PORT=3002 NODE_PATH=src CONNECTOR_JSON_IN_DEV=$CONSUMER_CONNECTOR_JSON nodemon --exec ts-node src/server.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "start": "NODE_PATH=dist node dist/server.js",
