--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.321.1",
+    "@keycloak/keycloak-admin-client": "^18",
     "@koa/cors": "^4.0.0",
     "@koa/multer": "^3.0.2",
     "@koa/router": "^12.0.0",
