fix: make API work with upstream connectors - corrects issues that made deleting assets to fail - uses endpoint from callback instead of connector config

--- a/.env-sample
+++ b/.env-sample
@@ -14,7 +14,9 @@ TEST_PG_PORT=
 KEYCLOAK_REALM=
 KEYCLOAK_HOST=
 KEYCLOAK_ADMIN=
+KEYCLOAK_ADMIN_REALM=
 KEYCLOAK_ADMIN_PASSWORD=
+KEYCLOAK_ADMIN_USERNAME=
 KEYCLOAK_PUBLIC_KEY=
 
 KEYCLOAK_CLIENT_ID=
