--- a/.env-sample
+++ b/.env-sample
@@ -14,7 +14,6 @@ TEST_PG_PORT=
 KEYCLOAK_REALM=
 KEYCLOAK_HOST=
 KEYCLOAK_ADMIN=
-KEYCLOAK_ADMIN_REALM=
 KEYCLOAK_ADMIN_PASSWORD=
 KEYCLOAK_ADMIN_USERNAME=
 KEYCLOAK_PUBLIC_KEY=
@@ -33,6 +32,9 @@ CONSUMER_CONNECTOR_JSON=
 # ---------------END: dev only env variables--------------------
 
 REDIS_URL=
+REDIS_PROTOCOL=
+
+SFC_UNIT_BASEURL=
 
 SUPPORTED_EDC_FILTER_OPERATORS=
 
