chore: adds docs and architectural diagram to the project

--- a/.env-sample
+++ b/.env-sample
@@ -50,6 +50,9 @@ CONSUMER_CONNECTOR_CONFIG='{"id":"urn:connector:consumer","title":"consumer.edc.
 PROVIDER_CONNECTOR_CONFIG='{"id":"urn:connector:provider","title":"provider.edc.think-it.io","catalogId":"default","description":"The provider connector for the EDC manager demo","region":"eu-west-1","addresses":{"default":"http://localhost:29191","control":"http://localhost:29192","data":"http://localhost:29193","ids":"http://provider-connector:9194","public":"http://localhost:29291"}}'
 
 
+export PROVIDER_CONNECTOR_JSON='api-env-connector-json/provider-local.json'
+export CONSUMER_CONNECTOR_JSON='api-env-connector-json/consumer-local.json'
+
 PROVIDER_KEYCLOAK_PUBLIC_KEY=
 CONSUMER_KEYCLOAK_PUBLIC_KEY=
 
